--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,16 @@ endif()
 
 target_link_libraries(exam PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
+
+target_include_directories(
+    exam
+    PRIVATE
+    C:/Qt/Tools/OpenSSLv3/Win_x64/include)
+target_link_libraries(
+    exam
+    PRIVATE
+    C:/Qt/Tools/OpenSSLv3/Win_x64/lib/libcrypto.lib)
+
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
